--- a/13 - Using minmax() for Responsive Grids/minmax-DONE.html
+++ b/13 - Using minmax() for Responsive Grids/minmax-DONE.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="item item1">Item 01</div>
-    <div class="item item2">Bonjour!</div>
+    <div class="item item2">Bonjour! Hello! Moi!</div>
     <div class="item item3">Item 03</div>
     <div class="item item4">Item 04</div>
   </div>
@@ -21,7 +21,13 @@
       display: grid;
       grid-gap: 20px;
       border: 10px solid var(--yellow);
-      grid-template-columns: repeat(auto-fit, 150px);
+
+      /* 
+        On small screens, items will take up the full width.
+        At 540px (200px * 2 + 20px * 2), they will be two items per row.
+        As the width of the screen increases, more items are added.
+       */
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
   </style>
 </body>
